; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/ia64/sn/kernel/extr_tiocx.c_tio_corelet_reset.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/ia64/sn/kernel/extr_tiocx.c_tio_corelet_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TIO_ICE_PMI_TX_CFG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32)* @tio_corelet_reset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tio_corelet_reset(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %3, align 4
  %6 = and i32 %5, 1
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %9, label %8

8:                                                ; preds = %2
  br label %20

9:                                                ; preds = %2
  %10 = load i32, i32* %3, align 4
  %11 = load i32, i32* @TIO_ICE_PMI_TX_CFG, align 4
  %12 = load i32, i32* %4, align 4
  %13 = shl i32 1, %12
  %14 = call i32 @REMOTE_HUB_S(i32 %10, i32 %11, i32 %13)
  %15 = call i32 @udelay(i32 2000)
  %16 = load i32, i32* %3, align 4
  %17 = load i32, i32* @TIO_ICE_PMI_TX_CFG, align 4
  %18 = call i32 @REMOTE_HUB_S(i32 %16, i32 %17, i32 0)
  %19 = call i32 @udelay(i32 2000)
  br label %20

20:                                               ; preds = %9, %8
  ret void
}

declare dso_local i32 @REMOTE_HUB_S(i32, i32, i32) #1

declare dso_local i32 @udelay(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
